# Metaverse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVOPS_PLAN.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  supabase_schema.sql
.github/workflows/: deploy.yml
frontend/: Dockerfile  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx  sprites.js
frontend/src/hooks/: useApi.js
frontend/src/pages/: Arena.jsx  AvatarSelect.jsx  Login.jsx  Spaces.jsx
scripts/: run_ai.bat  run_ai.sh  run_all.sh  run_http.bat  run_http.sh  run_tests.bat  run_tests.sh  run_ws.bat  run_ws.sh
services/ai_assistant/: Dockerfile  requirements.txt
services/ai_assistant/app/: main.py
services/ai_assistant/app/routers/: chat.py
services/ai_assistant/app/services/: claude_service.py
services/http_api/: Dockerfile  requirements.txt
services/http_api/app/: main.py
services/http_api/app/routers/: admin.py  auth.py  space.py  user.py
services/http_api/app/services/: admin_service.py  auth_service.py  space_service.py  user_service.py
services/ws_server/: Dockerfile  requirements.txt
services/ws_server/app/: main.py  room_manager.py
shared/: config.py  database.py
shared/auth/: dependencies.py
shared/models/: element.py  space.py  user.py
tests/: conftest.py  requirements.txt  test_auth.py  test_spaces.py  test_websocket.py
